<resources>
    <string name="app_name">Book Swap</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="discover">Discover</string>
    <string name="likes">Likes</string>
    <string name="notifications">Notifications</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yes">Yes</string>
    <string name="negative">No</string>
    <string name="dialog_exit">Are you sure you want to exit the app?</string>
    <string name="username">Username</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="create_an_account">Create an account</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="welcome_text">Welcome to Book Swap</string>
    <string name="login">Sign in</string>
    <string name="register_text"><u>Register</u></string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="password_length">Password too short</string>
    <string name="same_password">New password can\'t be same as old password</string>
    <string name="about_you">About you</string>
    <string name="email_address">Email address</string>
    <string name="change_password">Change password</string>
    <string name="sign_out">Sign out</string>
    <string name="authors_not_found">Could not find authors</string>
    <string name="description_not_found">Could not find description</string>
    <string name="page_count_not_found">TBD</string>
    <string name="language_not_found">TBE</string>
    <string name="like_message">%1s likes your book \'%2s\'</string>
    <string name="unmatch">unmatch</string>
    <string name="button_to_unmatch_users">Button to unmatch users</string>
    <string name="swap">swap</string>
    <string name="button_to_swap_books">Button to swap books</string>
    <string name="swap_user_text">Choose one of %s\'s books</string>
    <string name="search">Search</string>
    <string name="search_hint">Hint</string>
    <string name="share">Share</string>
    <string name="showOnMap">Show on map</string>
</resources>