<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:paddingStart="30dp"
    android:paddingEnd="30dp">

    <ImageView
        android:src="@drawable/ic_profile"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="10dp"
        android:scaleType="center"
        android:background="@color/orange"
        android:contentDescription="@string/app_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/old_password"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:autofillHints="@string/old_password"
            android:inputType="textPassword"
            android:background="@color/light_green"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/new_password"
            android:gravity="center"
            android:autofillHints="@string/new_password"
            android:inputType="textPassword"
            android:background="@color/light_green"/>

    </com.google.android.material.textfield.TextInputLayout>



</LinearLayout>