<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/username_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/gray"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/username"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image" />

    <EditText
        android:id="@+id/username_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/username"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toStartOf="@id/username_apply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_text" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/username_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:src="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="@id/username_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/username_edit"
        app:layout_constraintTop_toTopOf="@id/username_edit" />

    <TextView
        android:id="@+id/about_you_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/about_you"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_edit" />

    <EditText
        android:id="@+id/user_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/about_you"
        android:hint="@string/about_you"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toStartOf="@id/about_you_apply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_you_text" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/about_you_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:src="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="@id/user_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/user_description"
        app:layout_constraintTop_toTopOf="@id/user_description" />

    <TextView
        android:id="@+id/email_address_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/email_address"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_description" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/email_address"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toStartOf="@id/email_address_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_address_text" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/email_address_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:src="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="@id/email_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/email_address"
        app:layout_constraintTop_toTopOf="@id/email_address" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_password_button" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/change_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/gray"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/change_password"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_address" />

    <TextView
        android:id="@+id/verified_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text=""
        app:layout_constraintBottom_toTopOf="@id/sign_out_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_out_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:text="@string/sign_out"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>